# voxscriber

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/voxscriber/: __init__.py  aligner.py  cli.py  diarizer.py  fix_path.py  formatters.py  pipeline.py  preprocessor.py  transcriber.py
tests/: test_cli.py  test_formatters.py  test_pipeline.py  test_subprocess_isolation.py
